--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NexusFlow - The Future of Team Collaboration</title>
-    <link href="prismhorizon-style.css" rel="stylesheet">
+    <title>Prismhorizon</title>
+    <link href="/prismhorizon-style.css" rel="stylesheet">
 <!--
 
 TemplateMo 594 nexus flow
@@ -39,7 +39,7 @@ https://templatemo.com/tm-594-nexus-flow
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <a href="/" class="logo">PrismHorizon</a>
+            <a href="/prismhorizon" class="logo">PrismHorizon</a>
             <ul class="nav-links">
                 <li><a href="#features">Features</a></li>
                 <li><a href="#pricing">Pricing</a></li>
@@ -47,7 +47,7 @@ https://templatemo.com/tm-594-nexus-flow
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="nav-bottom">
-                <a href="/terminal" class="cyber-button">Access Terminal</a>
+                <a href="/prismhorizon/terminal" class="cyber-button">Access Terminal</a>
             </div>
             <button class="mobile-menu-button" id="mobileMenuBtn">
                 <div class="hamburger">
@@ -63,7 +63,7 @@ https://templatemo.com/tm-594-nexus-flow
     <div class="mobile-menu-overlay" id="mobileMenuOverlay"></div>
     <div class="mobile-menu" id="mobileMenu">
         <div class="mobile-menu-header">
-            <a href="#top" class="mobile-menu-logo">PrismHorizon</a>
+            <a href="/prismhorizon" class="mobile-menu-logo">PrismHorizon</a>
             <button class="mobile-menu-close" id="mobileMenuClose">✕</button>
         </div>
         <div class="mobile-menu-cta">
@@ -87,8 +87,8 @@ https://templatemo.com/tm-594-nexus-flow
             </h1>
             <p class="hero-subtitle">The quantum leap in team collaboration. Connect minds, sync realities, achieve impossible.</p>
             <div class="hero-buttons">
-                <a href="/" class="btn-primary">About Me</a>
-                <a href="/docs" class="btn-secondary">View Documentation</a>
+                <a href="/prismhorizon" class="btn-primary">About Me</a>
+                <a href="/prismhorizon/docs" class="btn-secondary">View Documentation</a>
             </div>
         </div>
     </section>
