--- a/terminal/index.html
+++ b/terminal/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NexusFlow - The Future of Team Collaboration</title>
+    <title>Prismhorizon</title>
     <link href="/prismhorizon-style.css" rel="stylesheet">
     <!--
 
@@ -39,7 +39,7 @@
 <!-- Navigation -->
 <nav>
     <div class="nav-container">
-        <a href="/" class="logo">PrismHorizon</a>
+        <a href="/prismhorizon" class="logo">PrismHorizon</a>
         <ul class="nav-links">
             <li><a href="#features">Features</a></li>
             <li><a href="#pricing">Pricing</a></li>
@@ -47,7 +47,7 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="nav-bottom">
-            <a href="#" class="cyber-button">Access Terminal</a>
+            <a href="/prismhorizon/terminal" class="cyber-button">Access Terminal</a>
         </div>
         <button class="mobile-menu-button" id="mobileMenuBtn">
             <div class="hamburger">
@@ -63,11 +63,11 @@
 <div class="mobile-menu-overlay" id="mobileMenuOverlay"></div>
 <div class="mobile-menu" id="mobileMenu">
     <div class="mobile-menu-header">
-        <a href="#top" class="mobile-menu-logo">PrismHorizon</a>
+        <a href="/prismhorizon" class="mobile-menu-logo">PrismHorizon</a>
         <button class="mobile-menu-close" id="mobileMenuClose">✕</button>
     </div>
     <div class="mobile-menu-cta">
-        <a href="#" class="cyber-button">Access Terminal</a>
+        <a href="/prismhorizon/terminal" class="cyber-button">Access Terminal</a>
     </div>
     <nav class="mobile-menu-nav">
         <ul>
