--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prismhorizon</title>
-    <link href="/prismhorizon-style.css" rel="stylesheet">
+    <link href="prismhorizon-style.css" rel="stylesheet">
 <!--
 
 TemplateMo 594 nexus flow
