features/minecraft/index.html

--- a/prismhorizon/index.html
+++ b/prismhorizon/index.html
@@ -4,14 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prismhorizon</title>
-    <link href="prismhorizon-style.css" rel="stylesheet">
-<!--
+    <link href="../prismhorizon-style.css" rel="stylesheet">
 
-TemplateMo 594 nexus flow
-
-https://templatemo.com/tm-594-nexus-flow
-
--->
 </head>
 <body id="top">
     <!-- Enhanced Background Elements -->
@@ -106,12 +100,8 @@ https://templatemo.com/tm-594-nexus-flow
                     <span class="stat-label">Views</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">1</span>
+                    <span class="stat-number">0</span>
                     <span class="stat-label">Tasks Processed</span>
-                </div>
-                <div class="stat-item">
-                    <span class="stat-number">180+</span>
-                    <span class="stat-label">Countries</span>
                 </div>
             </div>
         </div>
@@ -122,15 +112,17 @@ https://templatemo.com/tm-594-nexus-flow
         <div class="features-container">
             <div class="section-header">
                 <h2 class="section-title">Core Systems</h2>
-                <p class="section-subtitle">Advanced modules designed for maximum efficiency and seamless integration</p>
+                <p class="section-subtitle">Advanced modules designed for maximum efficiency</p>
             </div>
 
             <div class="features-grid">
-                <div class="feature-card">
-                    <div class="feature-icon">⚡</div>
-                    <h3>Quantum Processing</h3>
-                    <p>Experience lightning-fast data processing with our quantum-inspired algorithms that handle complex workflows in microseconds.</p>
-                </div>
+                <a href="localhost:8080/prismhorizon/features/minecraft/" class="feature-link">
+                    <div class="feature-card">
+                        <div class="feature-icon">⚡</div>
+                        <h3>Minecraft</h3>
+                        <p>Make developing for Minecraft Plugins way easier.</p>
+                    </div>
+                </a>
 
                 <div class="feature-card">
                     <div class="feature-icon">🔮</div>
@@ -270,6 +262,6 @@ https://templatemo.com/tm-594-nexus-flow
         </div>
     </footer>
 
-    <script src="prismhorizon-scripts.js"></script>
+    <script src="../prismhorizon-scripts.js"></script>
 </body>
 </html>
