--- a/prismhorizon/terminal/index.html
+++ b/prismhorizon/terminal/index.html
@@ -5,16 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prismhorizon</title>
     <link href="/prismhorizon-style.css" rel="stylesheet">
-    <!--
 
-    TemplateMo 594 nexus flow
-
-    https://templatemo.com/tm-594-nexus-flow
-
-    -->
 </head>
 <body id="top">
-<!-- Enhanced Background Elements -->
 <div class="cyber-bg">
     <div class="cyber-gradient"></div>
     <div class="matrix-rain" id="matrixRain"></div>
@@ -88,7 +81,7 @@
         <p class="hero-subtitle">The quantum leap in team collaboration. Connect minds, sync realities, achieve impossible.</p>
         <div class="hero-buttons">
             <a href="/" class="btn-primary">About Me</a>
-            <a href="/docs" class="btn-secondary">View Documentation</a>
+            <a href="/prismhorizon/docsmhorizon/docs" class="btn-secondary">View Documentation</a>
         </div>
     </div>
 </section>
@@ -117,7 +110,7 @@
 <footer class="footer">
     <div class="footer-content">
         <div class="footer-links">
-            <a href="/docs">Documentation</a>
+            <a href="/prismhorizon/docsmhorizon/docs">Documentation</a>
             <span class="footer-separator">•</span>
             <a href="#">Contact Support</a>
         </div>
@@ -127,6 +120,6 @@
     </div>
 </footer>
 
-<script src="/prismhorizon-scripts.js"></script>
+<script src="/prismhorizon/prismhorizon-scripts.json-scripts.js"></script>
 </body>
 </html>
